--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <link rel="icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
 </head>
-
+  <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/71e7a41a60cee4401f7369d2b/afdb99a030b40ba736a88cef3.js");</script>
+  
 <body>
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
